--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-structures-js",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "Logical Data Structures in Vanilla JS",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "data structures",
     "logical",
     "stack",
-    "queue"
+    "queue",
+    "linked-list",
+    "linked list"
   ],
   "author": "Riccardo Polacci",
   "license": "ISC",
